--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .image-container{
     width: 50vw;
     height: 70vh;
-  background: red  url("/assets/photo-1686176904188-1c4457dd493d.avif")no-repeat fixed center/cover;
+  background: url("/assets/image.avif")no-repeat fixed center/cover;
   border: 2px solid red;
   border-radius: 10px;
 }
